--- a/UI/src/scenes/main/mainscene.fxml
+++ b/UI/src/scenes/main/mainscene.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import mvvm.FXBind?>
 <VBox fx:id="root"
       xmlns="https://javafx.com/javafx"
@@ -11,37 +11,55 @@
       styleClass="theme-back"
       spacing="15.0"
       alignment="CENTER">
-    <VBox spacing="40.0"
-          alignment="CENTER">
-        <VBox alignment="CENTER">
+    <AnchorPane fx:id="anchor"
+                prefHeight="${root.height}">
+        <StackPane prefHeight="${anchor.height}"
+                   prefWidth="${anchor.width}">
+            <VBox spacing="20.0"
+                  alignment="CENTER">
+                <VBox spacing="5.0"
+                      alignment="CENTER">
+                    <Label styleClass="title-label"
+                           text="Minesweeper"/>
+                    <Label styleClass="title-label"
+                           text="Choose your difficulty."/>
+                </VBox>
+                <VBox spacing="5.0"
+                      alignment="CENTER">
+                    <Button text="Easy"
+                            prefWidth="150.0"
+                            prefHeight="35.0"
+                            onAction="#easyAction"/>
+                    <Button text="Medium"
+                            prefWidth="150.0"
+                            prefHeight="35.0"
+                            onAction="#mediumAction"/>
+                    <Button text="Hard"
+                            prefWidth="150.0"
+                            prefHeight="35.0"
+                            onAction="#hardAction"/>
+                </VBox>
+            </VBox>
+        </StackPane>
+        <HBox AnchorPane.bottomAnchor="8.0"
+              AnchorPane.rightAnchor="8.0">
             <Label fx:id="averageTimeLabel"
-                   styleClass="title-label"/>
-        </VBox>
-        <VBox spacing="5.0"
-              alignment="CENTER">
-            <Label styleClass="title-label"
-                   text="Minesweeper"/>
-            <Label styleClass="title-label"
-                   text="Choose your difficulty."/>
-        </VBox>
-        <VBox spacing="10.0"
-              alignment="CENTER">
-            <Button text="Easy"
-                    prefWidth="150.0"
-                    prefHeight="35.0"
-                    onAction="#easyAction"/>
-            <Button text="Medium"
-                    prefWidth="150.0"
-                    prefHeight="35.0"
-                    onAction="#mediumAction"/>
-            <Button text="Hard"
-                    prefWidth="150.0"
-                    prefHeight="35.0"
-                    onAction="#hardAction"/>
-
-        </VBox>
-    </VBox>
-
+                   styleClass="avg-time-label"/>
+        </HBox>
+        <StackPane alignment="CENTER_LEFT"
+                   AnchorPane.topAnchor="8.0"
+                   onMouseClicked="#achievementsAction"
+                   styleClass="achievement-pane">
+            <Label text="View Achievements">
+                <StackPane.margin>
+                    <Insets left="8.0"
+                            right="8.0"
+                            top="8.0"
+                            bottom="8.0"/>
+                </StackPane.margin>
+            </Label>
+        </StackPane>
+    </AnchorPane>
     <fx:define>
         <FXBind controller="$controller"
                 controllerMethod="averageTime"
